create documentatio to endpoint create and list all products
